// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExitFullScreenButton is rendered using the dark theme's mark by default 1`] = `
<div>
  <EuiScreenReaderOnly>
    <p
      aria-live="polite"
    >
      In full screen mode, press ESC to exit.
    </p>
  </EuiScreenReaderOnly>
  <div>
    <button
      aria-label="Exit full screen mode"
      className="dshExitFullScreenButton"
      data-test-subj="exitFullScreenModeLogo"
      onClick={[MockFunction]}
    >
      <EuiFlexGroup
        alignItems="center"
        component="span"
        gutterSize="s"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiIcon
            size="l"
            type="/ui/logos/opensearch_mark_on_dark.svg"
          />
        </EuiFlexItem>
        <EuiFlexItem
          data-test-subj="exitFullScreenModeText"
          grow={false}
        >
          <div>
            <EuiText
              className="dshExitFullScreenButton__text"
              size="s"
            >
              <p>
                Exit full screen
              </p>
            </EuiText>
          </div>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiIcon
            className="dshExitFullScreenButton__icon"
            type="fullScreen"
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    </button>
  </div>
</div>
`;

exports[`ExitFullScreenButton is rendered using the dark theme's mark when light color-scheme is applied 1`] = `
<div>
  <EuiScreenReaderOnly>
    <p
      aria-live="polite"
    >
      In full screen mode, press ESC to exit.
    </p>
  </EuiScreenReaderOnly>
  <div>
    <button
      aria-label="Exit full screen mode"
      className="dshExitFullScreenButton"
      data-test-subj="exitFullScreenModeLogo"
      onClick={[MockFunction]}
    >
      <EuiFlexGroup
        alignItems="center"
        component="span"
        gutterSize="s"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiIcon
            size="l"
            type="/ui/logos/opensearch_mark_on_dark.svg"
          />
        </EuiFlexItem>
        <EuiFlexItem
          data-test-subj="exitFullScreenModeText"
          grow={false}
        >
          <div>
            <EuiText
              className="dshExitFullScreenButton__text"
              size="s"
            >
              <p>
                Exit full screen
              </p>
            </EuiText>
          </div>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiIcon
            className="dshExitFullScreenButton__icon"
            type="fullScreen"
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    </button>
  </div>
</div>
`;

exports[`ExitFullScreenButton is rendered using the light theme's mark when dark color-scheme is applied 1`] = `
<div>
  <EuiScreenReaderOnly>
    <p
      aria-live="polite"
    >
      In full screen mode, press ESC to exit.
    </p>
  </EuiScreenReaderOnly>
  <div>
    <button
      aria-label="Exit full screen mode"
      className="dshExitFullScreenButton"
      data-test-subj="exitFullScreenModeLogo"
      onClick={[MockFunction]}
    >
      <EuiFlexGroup
        alignItems="center"
        component="span"
        gutterSize="s"
        responsive={false}
      >
        <EuiFlexItem
          grow={false}
        >
          <EuiIcon
            size="l"
            type="/ui/logos/opensearch_mark_on_light.svg"
          />
        </EuiFlexItem>
        <EuiFlexItem
          data-test-subj="exitFullScreenModeText"
          grow={false}
        >
          <div>
            <EuiText
              className="dshExitFullScreenButton__text"
              size="s"
            >
              <p>
                Exit full screen
              </p>
            </EuiText>
          </div>
        </EuiFlexItem>
        <EuiFlexItem
          grow={false}
        >
          <EuiIcon
            className="dshExitFullScreenButton__icon"
            type="fullScreen"
          />
        </EuiFlexItem>
      </EuiFlexGroup>
    </button>
  </div>
</div>
`;
